[metadata]
name = pytweet
version = 0.0.1
author = Michael Wayne Kearney
author_email = mike.wayne.kearney@gmail.com
description = Twitter data mining
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mkearney/_tweet/python/pytweet
project_urls =
    Bug Tracker = https://github.com/mkearney/_tweet/python/pytweet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
